[gd_scene load_steps=4 format=3 uid="uid://d1iblasl6sjrv"]

[ext_resource type="Script" path="res://scripts/ai_player_v2.gd" id="1_hnukh"]
[ext_resource type="Texture2D" uid="uid://cxejwu8sns1h2" path="res://assets/ai_player.png" id="2_n166e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dr2ca"]
size = Vector2(16, 16)

[node name="AIPlayerV2" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 21
script = ExtResource("1_hnukh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dr2ca")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_n166e")

[node name="FinishLineRaycast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(50, -50)

[node name="DEBUG_FinishLineVector" type="Line2D" parent="FinishLineRaycast"]
unique_name_in_owner = true
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="DEBUG_FinishLineVectorLengthLabel" type="Label" parent="FinishLineRaycast/DEBUG_FinishLineVector"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DEBUG_VisibleTileLabels" type="Node2D" parent="."]
unique_name_in_owner = true
top_level = true

[node name="DEBUG_CanvasLayer" type="CanvasLayer" parent="."]

[node name="DEBUG_TimerLabel" type="Label" parent="DEBUG_CanvasLayer"]
unique_name_in_owner = true
offset_left = 779.0
offset_top = 26.0
offset_right = 822.0
offset_bottom = 49.0
text = "timer"

[node name="DEBUG_TimeRewardMultiplierLabel" type="Label" parent="DEBUG_CanvasLayer"]
unique_name_in_owner = true
offset_left = 756.0
offset_top = 53.0
offset_right = 845.0
offset_bottom = 76.0
text = "WinReward"

[node name="DEBUG_StateLabel" type="Label" parent="DEBUG_CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.5
offset_right = 40.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 0
text = "state label"
